...
                      fontSize: screenSize.width * 0.06,
                      fontWeight: FontWeight.w400,
                    ),
                  ),
                  const SizedBox(height: 6),
                  Text(
                    'Tìm sân để chơi thôi',
                    style: TextStyle(
                      color: Colors.white,
                      fontSize: screenSize.width * 0.065,
                      fontWeight: FontWeight.w700,
                      letterSpacing: -0.5,
                    ),
...
